# agentbrake

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: tests.yml
agentbrake/: __init__.py  client.py  detectors.py  types.py
agentbrake/server/: attest.py  main.py  security.py  store.py
agentbrake/server/templates/: validate.html
docs/: blog-post.md  demo-script.md  index.html
examples/: 00_config_snippet.py  01_loop_detection.py  02_budget_runaway.py  03_privilege_escalation.py  04_remote_validation.py  _shared.py  demo_auto.py
server/: main.py  store.py
server/templates/: validate.html
tests/: test_attestation.py  test_backend.py  test_client.py  test_detectors.py  test_guard.py
