[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentbrake"
version = "0.0.1"
description = "Circuit breaker SDK for LLM agents."
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
# Everything pytest needs to run the full test suite (detectors + backend).
# Kept dependency-light so the CI matrix can include Python 3.9, which
# langchain 1.x / langgraph drop. Heavy example-only deps live in
# requirements.txt for local dev convenience.
dev = [
    "pytest>=8.0",
    "fastapi>=0.110",
    "jinja2>=3.1",
]

[tool.setuptools.packages.find]
include = ["agentbrake*", "server*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
